agrego las particulas y el primer diseño con color y tipografia ya elegidos

--- a/index.html
+++ b/index.html
@@ -1,41 +1,97 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/glacial-indifference" type="text/css" />
+    <!-- Place favicon.ico in the root directory -->
+    <script src="https://kit.fontawesome.com/a3d4affd55.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#fafafa">
+
 </head>
 
 <body>
+    <div id="particles-js"></div>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <header class="contenedor-header">
+        <div class="container contenedor-presentacion">
+
+            <div class="contenedor-parrafo-bio">
+                <h1>Franco Curci</h1>
+                <h3><span>web developer</span></h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium culpa assumenda, nihil alias rerum, iure eveniet illum fugiat saepe esse dolor, qui molestiae sint adipisci quis eligendi! Cupiditate, labore libero. Lorem ipsum, dolor
+                    sit amet consectetur adipisicing elit. Facilis fugiat natus laboriosam ipsum repudiandae, laudantium saepe nostrum vitae libero dolores temporibus minus vero, perferendis dolor nam at voluptatum non quod.lorem Lorem ipsum dolor sit,
+                    amet consectetur adipisicing elit. Amet modi voluptas quod suscipit nihil laborum vel cupiditate facere, at eius magnam voluptatum ratione velit natus nam nemo, laboriosam numquam dolores! Lorem ipsum dolor, sit amet consectetur adipisicing
+                    elit. Praesentium, consequatur minus ducimus voluptates quos aliquam, quo blanditiis nesciunt pariatur saepe fugit similique itaque modi sunt assumenda deleniti, iste exercitationem magni?Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Eum corrupti, earum laboriosam quo et perferendis quas beatae molestias sequi voluptatem iste quia nostrum sit nam repellendus perspiciatis atque animi officiis!
+                </p>
+
+                <div class="contenedor-navegacion">
+                    <nav>
+
+                        <a href="https://www.facebook.com/franco.curci/"><i class="fab fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com/francocurci/"><i class="fab fa-instagram-square"></i> </a>
+                        <a href="https://github.com/FrancoCurci"><i class="fab fa-github-square"></i></a>
+                        <a href="https://twitter.com/curci_franco"><i class="fab fa-twitter-square"></i></a>
+
+                    </nav>
+                </div>
+
+            </div>
+
+            <div class="contenedor-imagen-bio">
+                <img src="img/francocurciwebdeveloper.jpg" alt="">
+            </div>
+
+
+        </div>
+
+
+
+    </header>
+
+
+
+
+
+
+    <script src="js/particles.min.js"></script>
+    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+        window.ga = function() {
+            ga.q.push(arguments)
+        };
+        ga.q = [];
+        ga.l = +new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('set', 'anonymizeIp', true);
+        ga('set', 'transport', 'beacon');
+        ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
