tercer commit, ya agrego la seccion de tecnologias, pero aun no los estilos ni tampoco con el slider armado

--- a/index.html
+++ b/index.html
@@ -32,26 +32,49 @@
     <div id="particles-js"></div>
 
 
-    <header class="contenedor-header">
-        <div class="container contenedor-presentacion">
+    <header class="container contenedor-header">
+
+        <div class="contenedor-navegacion container">
+            <nav class="nav-header">
+                <a href="#header-presentacion">Quien soy</a>
+                <a href="#menu-tecnologias">Tecnologias</a>
+                <a href="#section-proyectos">Proyectos</a>
+                <a href="#section-contactos">Contacto</a>
+            </nav>
+
+        </div>
+
+
+
+        <div id="header-presentacion" class="contenedor-presentacion">
 
             <div class="contenedor-parrafo-bio">
                 <h1>Franco Curci</h1>
                 <h3><span>web developer</span></h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium culpa assumenda, nihil alias rerum, iure eveniet illum fugiat saepe esse dolor, qui molestiae sint adipisci quis eligendi! Cupiditate, labore libero. Lorem ipsum, dolor
-                    sit amet consectetur adipisicing elit. Facilis fugiat natus laboriosam ipsum repudiandae, laudantium saepe nostrum vitae libero dolores temporibus minus vero, perferendis dolor nam at voluptatum non quod.lorem Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Amet modi voluptas quod suscipit nihil laborum vel cupiditate facere, at eius magnam voluptatum ratione velit natus nam nemo, laboriosam numquam dolores! Lorem ipsum dolor, sit amet consectetur adipisicing
-                    elit. Praesentium, consequatur minus ducimus voluptates quos aliquam, quo blanditiis nesciunt pariatur saepe fugit similique itaque modi sunt assumenda deleniti, iste exercitationem magni?Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Eum corrupti, earum laboriosam quo et perferendis quas beatae molestias sequi voluptatem iste quia nostrum sit nam repellendus perspiciatis atque animi officiis!
+                <p>Desde que era pequeño siempre fui un aficionado por los videosjuegos, eso llevo a que cuando creciera
+                    me interesara como es que estos eran creados. estos fueron mis comienzos en la programacion, a lo
+                    largo de mi vida fui estudiando de
+                    manera autodidacta distinas tecnologias y creando proyectos de manera personal. entre esas
+                    tecnologias se encuentran HTML, CSS, JS, NODE, PHP, JAVA, SQL, Wordpress y un largo etc.</p>
+                <p>Mi carrera profesional comenzo a mis 18 años cuando comence a trabajar para una consultora
+                    multinacional en el puesto de soporte de aplicaciones, en esta utilizo tecnologias como JAVA, SQL y
+                    PowerBI.
                 </p>
+                <p>Adelantando unos años en el tiempo, en el 2020 en plena pandemia, con mi padre tomamos la decicion de
+                    iniciar en paralelo a nuestros trabajos una agencia propia dedicada exclusivamente al diseño de
+                    paginas web en Wordpress llamada <a href="https://lionfour.com/">LionFour<a>, mas adelante
+                            empezariamos a ofrecer a su vez
+                            servicios de marketing.</p>
 
                 <div class="contenedor-navegacion">
                     <nav>
-
-                        <a href="https://www.facebook.com/franco.curci/"><i class="fab fa-facebook-square"></i></a>
-                        <a href="https://www.instagram.com/francocurci/"><i class="fab fa-instagram-square"></i> </a>
+                        <a href="https://lionfour.com/"><i class="fas fa-laptop"></i></a>
                         <a href="https://github.com/FrancoCurci"><i class="fab fa-github-square"></i></a>
-                        <a href="https://twitter.com/curci_franco"><i class="fab fa-twitter-square"></i></a>
+                        <a href="https://www.linkedin.com/in/franco-c-705792120/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://wa.me/541122535104?text=Hola!%20Te%20Hablo%20Desde%20La%20pagina%20de%github"><i
+                                class="fab fa-whatsapp-square"></i></a>
+
+
 
                     </nav>
                 </div>
@@ -59,7 +82,7 @@
             </div>
 
             <div class="contenedor-imagen-bio">
-                <img src="img/francocurciwebdeveloper.jpg" alt="">
+                <img src="img/fcurci imagen redondeada.png" alt="Franco Curci web developer">
             </div>
 
 
@@ -70,6 +93,189 @@
     </header>
 
 
+    <div class="contenedor-flecha-abajo " id="flecha_section_tecnologias">
+        <i class="fas fa-sort-down"></i>
+        <!--  <i class="fas fa-chevron-down"></i> -->
+
+    </div>
+
+
+    <main class="container" id="menu-tecnologias">
+        <div class="tecnologias">
+
+            <!-- HTML 5-->
+            <div id="contenedor1" class="contenedor-tecnologias">
+                <div class="contenedor-imagen-main">
+                    <img src="img/HTML5.png" alt="">
+                </div>
+                <div class="contenedor-texto-main">
+                    <h2>HTML 5</h2>
+                    <h3>¿Para que se utiliza?</h3>
+                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
+                        web
+                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
+                        web
+                    </p>
+                    <h3>Dominio del lenguaje</h3>
+                    <div class="conocimiento-contenedor">
+                        <p>Basico</p>
+                        <p>Experto</p>
+                    </div>
+                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                </div>
+            </div>
+            <!-- CSS3-->
+            <div id="contenedor2" class="contenedor-tecnologias">
+                <div class="contenedor-imagen-main">
+                    <img src="img/css.png" alt="">
+                </div>
+                <div class="contenedor-texto-main">
+                    <h2>HTML 5</h2>
+                    <h3>¿Para que se utiliza?</h3>
+                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
+                        web
+                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
+                        web
+                    </p>
+                    <h3>Dominio del lenguaje</h3>
+                    <div class="conocimiento-contenedor">
+                        <p>Basico</p>
+                        <p>Experto</p>
+                    </div>
+                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                </div>
+            </div>
+            <!-- JS-->
+            <div id="contenedor3" class="contenedor-tecnologias">
+                <div class="contenedor-imagen-main">
+                    <img src="img/js.png" alt="">
+                </div>
+                <div class="contenedor-texto-main">
+                    <h2>HTML 5</h2>
+                    <h3>¿Para que se utiliza?</h3>
+                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
+                        web
+                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
+                        web
+                    </p>
+                    <h3>Dominio del lenguaje</h3>
+                    <div class="conocimiento-contenedor">
+                        <p>Basico</p>
+                        <p>Experto</p>
+                    </div>
+                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                </div>
+            </div>
+            <!-- NODE-->
+            <div id="contenedor4" class="contenedor-tecnologias">
+                <div class="contenedor-imagen-main">
+                    <img src="img/NODE JS.png" alt="">
+                </div>
+                <div class="contenedor-texto-main">
+                    <h2>HTML 5</h2>
+                    <h3>¿Para que se utiliza?</h3>
+                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
+                        web
+                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
+                        web
+                    </p>
+                    <h3>Dominio del lenguaje</h3>
+                    <div class="conocimiento-contenedor">
+                        <p>Basico</p>
+                        <p>Experto</p>
+                    </div>
+                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                </div>
+            </div>
+            <!-- JAVA-->
+            <div id="contenedor5" class="contenedor-tecnologias">
+                <div class="contenedor-imagen-main">
+                    <img src="img/java.png" alt="">
+                </div>
+                <div class="contenedor-texto-main">
+                    <h2>HTML 5</h2>
+                    <h3>¿Para que se utiliza?</h3>
+                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
+                        web
+                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
+                        web
+                    </p>
+                    <h3>Dominio del lenguaje</h3>
+                    <div class="conocimiento-contenedor">
+                        <p>Basico</p>
+                        <p>Experto</p>
+                    </div>
+                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                </div>
+            </div>
+            <!-- PHP-->
+            <div id="contenedor6" class="contenedor-tecnologias">
+                <div class="contenedor-imagen-main">
+                    <img src="img/PHP.png" alt="">
+                </div>
+                <div class="contenedor-texto-main">
+                    <h2>HTML 5</h2>
+                    <h3>¿Para que se utiliza?</h3>
+                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
+                        web
+                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
+                        web
+                    </p>
+                    <h3>Dominio del lenguaje</h3>
+                    <div class="conocimiento-contenedor">
+                        <p>Basico</p>
+                        <p>Experto</p>
+                    </div>
+                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                </div>
+            </div>
+            <!--SQL-->
+            <div id="contenedor7" class="contenedor-tecnologias">
+                <div class="contenedor-imagen-main">
+                    <img src="img/mysql.png" alt="">
+                </div>
+                <div class="contenedor-texto-main">
+                    <h2>HTML 5</h2>
+                    <h3>¿Para que se utiliza?</h3>
+                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
+                        web
+                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
+                        web
+                    </p>
+                    <h3>Dominio del lenguaje</h3>
+                    <div class="conocimiento-contenedor">
+                        <p>Basico</p>
+                        <p>Experto</p>
+                    </div>
+                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                </div>
+            </div>
+            <!--WORDPRESS-->
+            <div id="contenedor9" class="contenedor-tecnologias">
+                <div class="contenedor-imagen-main">
+                    <img src="img/wordpress.png" alt="">
+                </div>
+                <div class="contenedor-texto-main">
+                    <h2>HTML 5</h2>
+                    <h3>¿Para que se utiliza?</h3>
+                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
+                        web
+                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
+                        web
+                    </p>
+                    <h3>Dominio del lenguaje</h3>
+                    <div class="conocimiento-contenedor">
+                        <p>Basico</p>
+                        <p>Experto</p>
+                    </div>
+                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                </div>
+            </div>
+
+        </div>
+
+    </main>
+
 
 
 
@@ -77,11 +283,12 @@
     <script src="js/particles.min.js"></script>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
-        window.ga = function() {
+        window.ga = function () {
             ga.q.push(arguments)
         };
         ga.q = [];
