faltan las animaciones js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="particles-js"></div>
 
 
-    <header class="container contenedor-header">
+    <header class="container contenedor-header ">
 
         <div class="contenedor-navegacion container">
             <nav class="nav-header">
@@ -93,191 +93,150 @@
     </header>
 
 
-    <div class="contenedor-flecha-abajo " id="flecha_section_tecnologias">
-        <i class="fas fa-sort-down"></i>
-        <!--  <i class="fas fa-chevron-down"></i> -->
 
-    </div>
+    <main class="contenedor-main">
 
 
-    <main class="container" id="menu-tecnologias">
-        <div class="tecnologias">
-
-            <!-- HTML 5-->
-            <div id="contenedor1" class="contenedor-tecnologias">
-                <div class="contenedor-imagen-main">
+        <div class="contenedor-tech">
+            <h2>Frontend</h2>
+            <div class="">
+                <div class="imagen-tech">
                     <img src="img/HTML5.png" alt="">
+                    <p>html 5</p>
                 </div>
-                <div class="contenedor-texto-main">
-                    <h2>HTML 5</h2>
-                    <h3>¿Para que se utiliza?</h3>
-                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
-                        web
-                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
-                        web
-                    </p>
-                    <h3>Dominio del lenguaje</h3>
-                    <div class="conocimiento-contenedor">
-                        <p>Basico</p>
-                        <p>Experto</p>
-                    </div>
-                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
-                </div>
-            </div>
-            <!-- CSS3-->
-            <div id="contenedor2" class="contenedor-tecnologias">
-                <div class="contenedor-imagen-main">
+
+                <div class="imagen-tech">
                     <img src="img/css.png" alt="">
+                    <p>css 3</p>
                 </div>
-                <div class="contenedor-texto-main">
-                    <h2>HTML 5</h2>
-                    <h3>¿Para que se utiliza?</h3>
-                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
-                        web
-                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
-                        web
-                    </p>
-                    <h3>Dominio del lenguaje</h3>
-                    <div class="conocimiento-contenedor">
-                        <p>Basico</p>
-                        <p>Experto</p>
-                    </div>
-                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
-                </div>
-            </div>
-            <!-- JS-->
-            <div id="contenedor3" class="contenedor-tecnologias">
-                <div class="contenedor-imagen-main">
+
+                <div class="imagen-tech">
                     <img src="img/js.png" alt="">
+                    <p>JavaScript</p>
                 </div>
-                <div class="contenedor-texto-main">
-                    <h2>HTML 5</h2>
-                    <h3>¿Para que se utiliza?</h3>
-                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
-                        web
-                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
-                        web
-                    </p>
-                    <h3>Dominio del lenguaje</h3>
-                    <div class="conocimiento-contenedor">
-                        <p>Basico</p>
-                        <p>Experto</p>
-                    </div>
-                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                <div class="imagen-tech">
+                    <img src="img/jquery.png" alt="">
+                    <p>Jquery</p>
                 </div>
             </div>
-            <!-- NODE-->
-            <div id="contenedor4" class="contenedor-tecnologias">
-                <div class="contenedor-imagen-main">
-                    <img src="img/NODE JS.png" alt="">
-                </div>
-                <div class="contenedor-texto-main">
-                    <h2>HTML 5</h2>
-                    <h3>¿Para que se utiliza?</h3>
-                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
-                        web
-                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
-                        web
-                    </p>
-                    <h3>Dominio del lenguaje</h3>
-                    <div class="conocimiento-contenedor">
-                        <p>Basico</p>
-                        <p>Experto</p>
-                    </div>
-                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
-                </div>
-            </div>
-            <!-- JAVA-->
-            <div id="contenedor5" class="contenedor-tecnologias">
-                <div class="contenedor-imagen-main">
+        </div>
+
+
+
+        <div class="contenedor-tech">
+            <h2>Backend</h2>
+            <div>
+
+
+
+
+                <div class="imagen-tech">
                     <img src="img/java.png" alt="">
+                    <p>java</p>
                 </div>
-                <div class="contenedor-texto-main">
-                    <h2>HTML 5</h2>
-                    <h3>¿Para que se utiliza?</h3>
-                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
-                        web
-                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
-                        web
-                    </p>
-                    <h3>Dominio del lenguaje</h3>
-                    <div class="conocimiento-contenedor">
-                        <p>Basico</p>
-                        <p>Experto</p>
-                    </div>
-                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+
+                <div class="imagen-tech">
+                    <img src="img/PHP2.png" alt="">
+                    <p>php</p>
                 </div>
-            </div>
-            <!-- PHP-->
-            <div id="contenedor6" class="contenedor-tecnologias">
-                <div class="contenedor-imagen-main">
-                    <img src="img/PHP.png" alt="">
+
+                <div class="imagen-tech">
+                    <img src="img/NODE JS.png" alt="">
+                    <p>node js</p>
                 </div>
-                <div class="contenedor-texto-main">
-                    <h2>HTML 5</h2>
-                    <h3>¿Para que se utiliza?</h3>
-                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
-                        web
-                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
-                        web
-                    </p>
-                    <h3>Dominio del lenguaje</h3>
-                    <div class="conocimiento-contenedor">
-                        <p>Basico</p>
-                        <p>Experto</p>
-                    </div>
-                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
-                </div>
-            </div>
-            <!--SQL-->
-            <div id="contenedor7" class="contenedor-tecnologias">
-                <div class="contenedor-imagen-main">
+                <div class="imagen-tech">
                     <img src="img/mysql.png" alt="">
-                </div>
-                <div class="contenedor-texto-main">
-                    <h2>HTML 5</h2>
-                    <h3>¿Para que se utiliza?</h3>
-                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
-                        web
-                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
-                        web
-                    </p>
-                    <h3>Dominio del lenguaje</h3>
-                    <div class="conocimiento-contenedor">
-                        <p>Basico</p>
-                        <p>Experto</p>
-                    </div>
-                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                    <p>sql</p>
                 </div>
             </div>
-            <!--WORDPRESS-->
-            <div id="contenedor9" class="contenedor-tecnologias">
-                <div class="contenedor-imagen-main">
+        </div>
+
+        <div class="contenedor-tech">
+            <h2>Cms</h2>
+            <div>
+                <div class="imagen-tech">
                     <img src="img/wordpress.png" alt="">
+                    <p>Wordpress</p>
                 </div>
-                <div class="contenedor-texto-main">
-                    <h2>HTML 5</h2>
-                    <h3>¿Para que se utiliza?</h3>
-                    <p>Lengua de etiquetados que tiene como funcion estructurar todo el contenido en la pagina, si una
-                        web
-                        fuera el cuerpo humano este seria su esqueleto. Basicamente sin el no podriamos contruir sitios
-                        web
-                    </p>
-                    <h3>Dominio del lenguaje</h3>
-                    <div class="conocimiento-contenedor">
-                        <p>Basico</p>
-                        <p>Experto</p>
-                    </div>
-                    <progress id="conocimiento-tecnologia" max="100" value="70"> 70% </progress>
+                <div class="imagen-tech">
+                    <img src="img/woo.png" alt="">
+                    <p>Woo</p>
                 </div>
+                <div class="imagen-tech">
+                    <img src="img/tiendanube.png" alt="">
+                    <p>Teinda nube</p>
+                </div>
+
             </div>
 
         </div>
+
+
 
     </main>
 
 
 
+    <article>
+        <section class="container contenedor-section">
+            <h2>Proyectos trabajados</h2>
+
+            <div class="contenedor-proyectos">
+
+                <iframe src="https://lionfour.com/" frameborder="0"></iframe>
+
+
+                <iframe src="https://www.rakhishoes.com/" frameborder="0"></iframe>
+
+
+            </div>
+
+        </section>
+
+
+
+    </article>
+
+
+    <article class="articulo-formulario">
+        <section class="contenedor-formulario">
+            <h1>Contacto</h1>
+            <form action="" method="post">
+                <div class="grupo-formulario">
+
+                    <input type="text" name="" id="nombre" placeholder="Ingresa tu nombre">
+                </div>
+                <div class="grupo-formulario">
+
+                    <input type="email" name="" id="nombre" placeholder="Ingresa tu Email">
+                </div>
+                <div class="grupo-formulario-textarea">
+
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese su consulta"></textarea>
+                </div>
+                <div class="grupo-formulario grupo-btn">
+                    <input type="button" id="enviar" class="btn-enviar" value="Enviar">
+                </div>
+            </form>
+        </section>
+    </article>
+
+
+
+
+    <footer class="container-footer">
+        <div class="contenedor-mail">
+
+            <p>francocurci@hotmail.com</p>
+
+        </div>
+        <div class="contenedor-copy">
+            <p>pagina hecha con ♥ </p>
+        </div>
+
+
+
+    </footer>
 
 
     <script src="js/particles.min.js"></script>
